add exogenous mortality and perform recruitment on aggregated biomass
A big commit with some code maintenance, but the two main changes are
the ones mentioned above.

We now apply recruitment to the aggregated (ocean wide) abundance, since
we realized that the R0 would otherwise need to be scaled.

And we add exogenous mortality because it was long overdue and because
@brianreedpowers needs it to test the combined biological processes.

Note that the natural and exogenous mortality are handled by the
same AbundanceMortalityProcess class. That means we can probably remove
the mortality values from TunaMeristics, but I haven't done that yet.

--- a/inputs/tests/epo.yaml
+++ b/inputs/tests/epo.yaml
@@ -7,6 +7,14 @@ EPO Abundance:
   abundanceInitializerFactory:
     Abundance Initializer Factory:
       binsFilePath: inputs/epo/abundance/bins.csv
+  abundanceMortalityProcessFactory: !!uk.ac.ox.oxfish.biology.tuna.AbundanceMortalityProcessFromFileFactory
+    mortalityFile: inputs/epo/abundance/mortality.csv
+    sources: !!set
+      natural: null
+      obj_class_1_5: null
+      noa_class_1_5: null
+      longline: null
+    speciesCodes: null
   abundancePurseSeineGearFactory:
     actionDistanceExponent: 1.0
     actionSpecificRegulations:
@@ -58,7 +66,7 @@ EPO Abundance:
       Yellowfin tuna: 9
   abundanceRestorerFactory:
     schedule:
-      0: 364
+      0: 365
   attractionWeightsFile: inputs/epo/action_weights.csv
   costsFile: inputs/epo/costs.csv
   fadInitializerFactory:
@@ -156,6 +164,7 @@ EPO Abundance:
     - closure A
     - closure B
   scheduledAbundanceProcessesFactory:
+    abundanceMortalityProcessFactory: null
     biologicalProcessesDates:
     - '2017-01-01'
     - '2017-04-01'
