More planning bonanza, but still not a viable strategy that uses it.

--- a/inputs/tests/epo.yaml
+++ b/inputs/tests/epo.yaml
@@ -107,6 +107,7 @@ EPO Abundance:
       Y2016: inputs/epo/currents/currents_2016.csv
       Y2017: inputs/epo/currents/currents_2017.csv
   fishingStrategyFactory:
+    ageBasedSetDecisions: false
     attractionWeightsFile: null
     catchSamplersFactory: null
     dolphinSetActionValueFunction:
