--- a/inputs/tests/epo_biomass.yaml
+++ b/inputs/tests/epo_biomass.yaml
@@ -5,191 +5,89 @@ EPO Biomass:
     Biomass Initializer Factory:
       biomassReallocator: null
       schaeferParamsFile: inputs/epo/biomass/schaefer_params.csv
+  catchSamplersFactory: !!uk.ac.ox.oxfish.fisher.purseseiner.samplers.BiomassCatchSamplersFactory
+    catchSamplesFile: inputs/epo/set_samples.csv
   costsFile: inputs/epo/costs.csv
   fadInitializerFactory:
-    Biomass FAD Initializer: &id001
+    Biomass FAD Initializer:
       attractableBiomassCoefficients:
-        Bigeye tuna: '0.0'
+        Bigeye tuna: '1.0184011081061861'
         Yellowfin tuna: '0.0'
-        Skipjack tuna: '0.0'
+        Skipjack tuna: '0.7138646301498129'
       biomassInteractionsCoefficients:
-        Bigeye tuna: '0.0'
-        Yellowfin tuna: '0.0'
-        Skipjack tuna: '0.0'
+        Bigeye tuna: '9.557509707646096'
+        Yellowfin tuna: '10.419783885948643'
+        Skipjack tuna: '9.492481930328207'
       compressionExponents:
-        Bigeye tuna: '0.0'
-        Yellowfin tuna: '0.0'
+        Bigeye tuna: '0.7697766896339598'
+        Yellowfin tuna: '1.1292389959739901'
         Skipjack tuna: '0.0'
-      fishReleaseProbabilityInPercent: '0.0'
+      fishReleaseProbabilityInPercent: '2.0'
       growthRates:
-        Bigeye tuna: '0.0'
-        Yellowfin tuna: '0.0'
-        Skipjack tuna: '0.0'
+        Bigeye tuna: '0.688914118975473'
+        Yellowfin tuna: '0.30133562299610883'
+        Skipjack tuna: '1.25'
       speciesCodes: null
       totalCarryingCapacity: '445000.0'
   fadMapFactory:
     currentFiles:
       Y2017: inputs/epo/currents/currents_2017.csv
   fadMortalityIncludedInExogenousCatches: true
-  fisherDefinition:
-    departingStrategy: Purse Seiner Departing Strategy
-    destinationStrategy:
-      Gravity Destination Strategy:
-        attractionWeightsFile: inputs/epo/action_weights.csv
-        maxTripDurationFile: inputs/epo/boats.csv
-    discardingStrategy: No Discarding
-    fishingStrategy:
-      Purse Seiner Biomass Fishing Strategy:
-        attractionWeightsFile: null
-        catchSamplersFactory: !!uk.ac.ox.oxfish.fisher.purseseiner.samplers.BiomassCatchSamplersFactory
-          catchSamplesFile: inputs/epo/set_samples.csv
-        dolphinSetActionValueFunction:
-          Compressed Exponential Function:
-            coefficient: 1.0E-6
-            exponent: 2.0
-        dolphinSetDetectionProbability: 0.1
-        dolphinSetGeneratorFunction:
-          Compressed Exponential Function:
-            coefficient: 1.0E-6
-            exponent: 2.0
-        fadDeploymentActionDecayConstant: 1.0
-        fadDeploymentActionValueFunction:
-          Compressed Exponential Function:
-            coefficient: 1.0E-6
-            exponent: 2.0
-        fadSetActionValueFunction:
-          Compressed Exponential Function:
-            coefficient: 1.0E-6
-            exponent: 2.0
-        movingThreshold: 0.1
-        nonAssociatedSetActionValueFunction:
-          Compressed Exponential Function:
-            coefficient: 1.0E-6
-            exponent: 2.0
-        nonAssociatedSetDetectionProbability: 0.1
-        nonAssociatedSetGeneratorFunction:
-          Compressed Exponential Function:
-            coefficient: 1.0E-6
-            exponent: 2.0
-        opportunisticFadSetActionValueFunction:
-          Compressed Exponential Function:
-            coefficient: 1.0E-6
-            exponent: 2.0
-        opportunisticFadSetDetectionProbability: 0.1
-        searchActionDecayConstant: 1.0
-        searchActionValueFunction:
-          Compressed Exponential Function:
-            coefficient: 1.0E-6
-            exponent: 2.0
-        searchBonus: 0.1
-        setCompositionWeightsPath: inputs/epo/set_compositions.csv
-    fuelTankSize: '100000.0'
-    gear:
-      Biomass Purse Seine Gear:
-        actionDistanceExponent: 1.0
-        actionSpecificRegulations:
-        - Active FAD limits:
-            limitClass1: 70
-            limitClass2: 70
-            limitClass3: 70
-            limitClass4: 120
-            limitClass5: 120
-            limitClass6a: 300
-            limitClass6b: 450
-        biomassLostMonitor: null
-        decayRateOfDeploymentLocationValues: 0.01
-        decayRateOfDolphinSetLocationValues: 0.01
-        decayRateOfNonAssociatedSetLocationValues: 0.01
-        decayRateOfOpportunisticFadSetLocationValues: 0.01
-        destinationDistanceExponent: 1.0
-        dolphinSetObservers: !!set {
-          }
-        dolphinSetTimeSinceLastVisitModulationFunction:
-          Compressed Exponential Function:
-            coefficient: 1.0E-6
-            exponent: 2.0
-        fadDeploymentObservers: !!set {
-          }
-        fadDeploymentPctActiveFadsLimitModulationFunction:
-          Compressed Exponential Function:
-            coefficient: 1.0E-6
-            exponent: 2.0
-        fadInitializerFactory: *id001
-        fadSetObservers: !!set {
-          }
-        locationValuesFile: inputs/epo/location_values.csv
-        nonAssociatedSetObservers: !!set {
-          }
-        nonAssociatedSetTimeSinceLastVisitModulationFunction:
-          Compressed Exponential Function:
-            coefficient: 1.0E-6
-            exponent: 2.0
-        numFadsInStockModulationFunction:
-          Compressed Exponential Function:
-            coefficient: 1.0E-6
-            exponent: 2.0
-        opportunisticFadSetTimeSinceLastVisitModulationFunction:
-          Compressed Exponential Function:
-            coefficient: 1.0E-6
-            exponent: 2.0
-        pctHoldSpaceLeftModulationFunction:
-          Compressed Exponential Function:
-            coefficient: 1.0E-6
-            exponent: 2.0
-        pctSetsRemainingModulationFunction:
-          Compressed Exponential Function:
-            coefficient: 1.0E-6
-            exponent: 2.0
-        pctTravelTimeLeftModulationFunction:
-          Compressed Exponential Function:
-            coefficient: 1.0E-6
-            exponent: 2.0
-        successfulSetProbability: '0.9231701'
-    gearStrategy:
-      FAD Refill:
-        fadCost: 1000.0
-        maxFadDeploymentsFile: inputs/epo/max_deployments.csv
-    holdSize: '100.0'
-    hourlyEffortCost: nullparameter
-    hourlyVariableCost: '0.0'
-    initialFishersPerPort: {
-      }
-    literPerKilometer: '10.0'
-    logbook: No Logbook
-    regulation: !!uk.ac.ox.oxfish.model.scenario.StandardIattcRegulationsFactory
-      factories:
-      - Specific MPA from Shape File:
-          shapeFilePath: inputs/epo/galapagos_eez/eez.shp
-      - Temporary Regulation:
-          delegate:
-            Specific MPA from Coordinates:
-              eastLongitude: '-96.0'
-              northLatitude: '4.0'
-              southLatitude: '-3.0'
-              westLongitude: '-110.0'
-          endDay: '312.0'
-          inactiveDelegate: Anarchy
-          startDay: '282.0'
-      - Temporary Regulation:
-          delegate: No Fishing
-          endDay: '281.0'
-          inactiveDelegate: Anarchy
-          startDay: '210.0'
-      - Temporary Regulation:
-          delegate: No Fishing
-          endDay: '19.0'
-          inactiveDelegate: Anarchy
-          startDay: '313.0'
-      tags:
-      - all
-      - all
-      - closure A
-      - closure B
-    speedInKmh: '5.0'
-    tags: ''
-    usePredictors: false
-    weatherStrategy: Ignore Weather
+  fishingStrategyFactory:
+    Purse Seiner Biomass Fishing Strategy:
+      attractionWeightsFile: null
+      catchSamplersFactory: null
+      dolphinSetActionValueFunction:
+        Logistic Function:
+          maximum: 1.0
+          midpoint: 1.0E-6
+          steepness: 2.0
+      dolphinSetDetectionProbability: 0.7136840195385347
+      dolphinSetGeneratorFunction:
+        Logistic Function:
+          maximum: 1.0
+          midpoint: 0.0
+          steepness: 0.0
+      fadDeploymentActionDecayConstant: 0.7228626294613664
+      fadDeploymentActionValueFunction:
+        Logistic Function:
+          maximum: 1.0
+          midpoint: 7338176.765769132
+          steepness: 0.0
+      fadSetActionValueFunction:
+        Logistic Function:
+          maximum: 1.0
+          midpoint: 0.0
+          steepness: 0.0
+      fishUnderFadsAvailableForSchoolSets: true
+      movingThreshold: 0.0
+      nonAssociatedSetActionValueFunction:
+        Logistic Function:
+          maximum: 1.0
+          midpoint: 555715.859646539
+          steepness: 3.6444986410608907E-6
+      nonAssociatedSetDetectionProbability: 1.0
+      nonAssociatedSetGeneratorFunction:
+        Logistic Function:
+          maximum: 1.0
+          midpoint: 15392.989688872976
+          steepness: 0.692315692124877
+      opportunisticFadSetActionValueFunction:
+        Logistic Function:
+          maximum: 1.0
+          midpoint: 0.0
+          steepness: 1.1404626767614229E-5
+      opportunisticFadSetDetectionProbability: 0.007275362250433118
+      searchActionDecayConstant: 7.912472944827373
+      searchActionValueFunction:
+        Logistic Function:
+          maximum: 1.0
+          midpoint: 7081017.137484187
+          steepness: 3.45300091459461E-6
+      searchBonus: 0.1
+      setCompositionWeightsPath: inputs/epo/set_compositions.csv
   gasPricePerLiter: '0.01'
+  locationValuesFilePath: inputs/epo/location_values.csv
   mapFile: inputs/epo/depth.csv
   mapInitializer:
     From File Map:
@@ -207,6 +105,96 @@ EPO Biomass:
       biomassReallocator: null
       schedule:
         0: 364
+  purseSeineGearFactory:
+    Biomass Purse Seine Gear:
+      actionDistanceExponent: 1.0
+      actionSpecificRegulations:
+      - Active FAD limits:
+          limitClass1: 70
+          limitClass2: 70
+          limitClass3: 70
+          limitClass4: 120
+          limitClass5: 120
+          limitClass6a: 300
+          limitClass6b: 450
+      biomassLostMonitor: null
+      decayRateOfDeploymentLocationValues: 0.01
+      decayRateOfDolphinSetLocationValues: 0.01
+      decayRateOfNonAssociatedSetLocationValues: 0.01
+      decayRateOfOpportunisticFadSetLocationValues: 0.01
+      destinationDistanceExponent: 1.0
+      dolphinSetObservers: !!set {
+        }
+      dolphinSetTimeSinceLastVisitModulationFunction:
+        Compressed Exponential Function:
+          coefficient: 1.0E-6
+          exponent: 2.0
+      fadDeploymentObservers: !!set {
+        }
+      fadDeploymentPctActiveFadsLimitModulationFunction:
+        Compressed Exponential Function:
+          coefficient: 1.0E-6
+          exponent: 2.0
+      fadInitializerFactory: null
+      fadSetObservers: !!set {
+        }
+      locationValuesFile: inputs/epo/location_values.csv
+      nonAssociatedSetObservers: !!set {
+        }
+      nonAssociatedSetTimeSinceLastVisitModulationFunction:
+        Compressed Exponential Function:
+          coefficient: 1.0E-6
+          exponent: 2.0
+      numFadsInStockModulationFunction:
+        Compressed Exponential Function:
+          coefficient: 1.0E-6
+          exponent: 2.0
+      opportunisticFadSetTimeSinceLastVisitModulationFunction:
+        Compressed Exponential Function:
+          coefficient: 1.0E-6
+          exponent: 2.0
+      pctHoldSpaceLeftModulationFunction:
+        Compressed Exponential Function:
+          coefficient: 1.0E-6
+          exponent: 2.0
+      pctSetsRemainingModulationFunction:
+        Compressed Exponential Function:
+          coefficient: 1.0E-6
+          exponent: 2.0
+      pctTravelTimeLeftModulationFunction:
+        Compressed Exponential Function:
+          coefficient: 1.0E-6
+          exponent: 2.0
+      successfulSetProbability: '0.9231701'
+  regulationsFactory: !!uk.ac.ox.oxfish.model.scenario.StandardIattcRegulationsFactory
+    factories:
+    - Specific MPA from Shape File:
+        shapeFilePath: inputs/epo/galapagos_eez/eez.shp
+    - Temporary Regulation:
+        delegate:
+          Specific MPA from Coordinates:
+            eastLongitude: '-96.0'
+            northLatitude: '4.0'
+            southLatitude: '-3.0'
+            westLongitude: '-110.0'
+        endDay: '312.0'
+        inactiveDelegate: Anarchy
+        startDay: '282.0'
+    - Temporary Regulation:
+        delegate: No Fishing
+        endDay: '281.0'
+        inactiveDelegate: Anarchy
+        startDay: '210.0'
+    - Temporary Regulation:
+        delegate: No Fishing
+        endDay: '19.0'
+        inactiveDelegate: Anarchy
+        startDay: '313.0'
+    tags:
+    - all
+    - all
+    - closure A
+    - closure B
   vesselsFilePath: inputs/epo/boats.csv
   weatherInitializer:
     Constant Weather:
