--- a/inputs/tests/epo.yaml
+++ b/inputs/tests/epo.yaml
@@ -1,11 +1,11 @@
 EPO Abundance:
   abundanceFiltersFactory:
-    selectivityFilePath: inputs/epo/abundance/selectivity.csv
+    selectivityFilePath: inputs/epo_inputs/abundance/selectivity.csv
   abundanceInitializerFactory:
     Abundance Initializer Factory:
-      binsFilePath: inputs/epo/abundance/bins.csv
+      binsFilePath: inputs/epo_inputs/abundance/bins.csv
   abundanceMortalityProcessFactory: !!uk.ac.ox.oxfish.biology.tuna.AbundanceMortalityProcessFromFileFactory
-    mortalityFile: inputs/epo/abundance/mortality.csv
+    mortalityFile: inputs/epo_inputs/abundance/mortality.csv
     sources:
     - natural
     - obj_class_1_5
@@ -13,7 +13,7 @@ EPO Abundance:
     - longline
     speciesCodes: null
   abundanceReallocatorFactory: !!uk.ac.ox.oxfish.biology.tuna.AbundanceReallocatorFactory
-    biomassDistributionsFilePath: inputs/epo/abundance/grids.csv
+    biomassDistributionsFilePath: inputs/epo_inputs/abundance/grids.csv
     firstLargeBinPerSpecies:
       Skipjack tuna: 14
       Bigeye tuna: 8
@@ -21,11 +21,11 @@ EPO Abundance:
   abundanceRestorerFactory:
     schedule:
       0: 365
-  attractionWeightsFile: inputs/epo/action_weights.csv
+  attractionWeightsFile: inputs/epo_inputs/action_weights.csv
   catchSamplersFactory: !!uk.ac.ox.oxfish.fisher.purseseiner.samplers.AbundanceCatchSamplersFactory
     abundanceFilters: null
-    catchSamplesFile: inputs/epo/set_samples.csv
-  costsFile: inputs/epo/costs.csv
+    catchSamplesFile: inputs/epo_inputs/set_samples.csv
+  costsFile: inputs/epo_inputs/costs.csv
   fadInitializerFactory:
     Abundance FAD Initializer:
       attractableBiomassCoefficients:
@@ -52,8 +52,8 @@ EPO Abundance:
       totalCarryingCapacity: '445000.0'
   fadMapFactory:
     currentFiles:
-      Y2016: inputs/epo/currents/currents_2016.csv
-      Y2017: inputs/epo/currents/currents_2017.csv
+      Y2016: inputs/epo_inputs/currents/currents_2016.csv
+      Y2017: inputs/epo_inputs/currents/currents_2017.csv
   fishingStrategyFactory: !!uk.ac.ox.oxfish.fisher.purseseiner.strategies.fishing.PurseSeinerAbundanceFishingStrategyFactory
     ageBasedSetDecisions: false
     attractionWeightsFile: null
@@ -106,14 +106,14 @@ EPO Abundance:
         midpoint: 7081017.137484187
         steepness: 3.45300091459461E-6
     searchBonus: 0.1
-    setCompositionWeightsPath: inputs/epo/set_compositions.csv
-  locationValuesFilePath: inputs/epo/location_values.csv
+    setCompositionWeightsPath: inputs/epo_inputs/set_compositions.csv
+  locationValuesFilePath: inputs/epo_inputs/location_values.csv
   mapInitializerFactory:
     From File Map:
       gridWidthInCell: '101.0'
       header: true
       latLong: true
-      mapFile: inputs/epo/depth.csv
+      mapFile: inputs/epo_inputs/depth.csv
       mapPaddingInDegrees: '0.5'
   purseSeineGearFactory: !!uk.ac.ox.oxfish.fisher.equipment.gear.factory.AbundancePurseSeineGearFactory
     actionDistanceExponent: 1.0
@@ -147,7 +147,7 @@ EPO Abundance:
     fadInitializerFactory: null
     fadSetObservers: !!set {
       }
-    locationValuesFile: inputs/epo/location_values.csv
+    locationValuesFile: inputs/epo_inputs/location_values.csv
     nonAssociatedSetObservers: !!set {
       }
     nonAssociatedSetTimeSinceLastVisitModulationFunction:
@@ -176,11 +176,11 @@ EPO Abundance:
         exponent: 2.0
     successfulSetProbability: '0.9231701'
   recruitmentProcessesFactory:
-    recruitmentParametersFilePath: inputs/epo/abundance/recruitment_parameters.csv
+    recruitmentParametersFilePath: inputs/epo_inputs/abundance/recruitment_parameters.csv
   regulationsFactory: !!uk.ac.ox.oxfish.model.scenario.StandardIattcRegulationsFactory
     factories:
     - Specific MPA from Shape File:
-        shapeFilePath: inputs/epo/galapagos_eez/eez.shp
+        shapeFilePath: inputs/epo_inputs/galapagos_eez/eez.shp
     - Temporary Regulation:
         delegate:
           Specific MPA from Coordinates:
@@ -221,4 +221,4 @@ EPO Abundance:
     - '2017-07-01'
     - '2017-10-01'
     recruitmentProcesses: null
-  vesselsFilePath: inputs/epo/boats.csv
+  vesselsFilePath: inputs/epo_inputs/boats.csv
