--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -12,6 +12,9 @@ jobs:
         uses: actions/checkout@v2
         with:
           submodules: recursive
+          lfs: true
+      - name: Checkout LFS objects
+        run: git lfs checkout
       - name: Set up JDK 8
         uses: actions/setup-java@v2
         with:
