adding a few smaller items before the big merge: (i) an optional expiration date to FADs (ii) MERA work on MPAs

--- a/inputs/YAML Samples/components/DepartingStrategy.yaml
+++ b/inputs/YAML Samples/components/DepartingStrategy.yaml
@@ -81,5 +81,6 @@ Full-time Seasonal Retired Decorator:
   targetVariable: '100.0'
   variableName: TRIP_PROFITS_PER_HOUR
 -------
-Purse Seiner Departing Strategy
+Purse Seiner Departing Strategy:
+  destinationBased: true
 -------
