--- a/inputs/YAML Samples/components/FishingStrategy.yaml
+++ b/inputs/YAML Samples/components/FishingStrategy.yaml
@@ -35,28 +35,46 @@ Maximum Days a Year Decorator:
 Purse Seiner Biomass Fishing Strategy:
   attractionWeightsFile: null
   catchSamplersFactory: null
-  dolphinSetActionLogisticMidpoint: 0.1
-  dolphinSetActionLogisticSteepness: 1.0
+  dolphinSetActionValueFunction:
+    Compressed Exponential Function:
+      coefficient: 1.0E-6
+      exponent: 2.0
   dolphinSetDetectionProbability: 0.1
-  dolphinSetGeneratorLogisticMidpoint: 100000.0
-  dolphinSetGeneratorLogisticSteepness: 1.0
+  dolphinSetGeneratorFunction:
+    Compressed Exponential Function:
+      coefficient: 1.0E-6
+      exponent: 2.0
   fadDeploymentActionDecayConstant: 1.0
-  fadDeploymentActionLogisticMidpoint: 0.1
-  fadDeploymentActionLogisticSteepness: 1.0
-  fadSetActionLogisticMidpoint: 0.1
-  fadSetActionLogisticSteepness: 1.0
+  fadDeploymentActionValueFunction:
+    Compressed Exponential Function:
+      coefficient: 1.0E-6
+      exponent: 2.0
+  fadSetActionValueFunction:
+    Compressed Exponential Function:
+      coefficient: 1.0E-6
+      exponent: 2.0
   movingThreshold: 0.1
-  nonAssociatedSetActionLogisticMidpoint: 0.1
-  nonAssociatedSetActionLogisticSteepness: 1.0
+  nonAssociatedSetActionValueFunction:
+    Compressed Exponential Function:
+      coefficient: 1.0E-6
+      exponent: 2.0
   nonAssociatedSetDetectionProbability: 0.1
-  nonAssociatedSetGeneratorLogisticMidpoint: 100000.0
-  nonAssociatedSetGeneratorLogisticSteepness: 1.0
-  opportunisticFadSetActionLogisticMidpoint: 0.1
-  opportunisticFadSetActionLogisticSteepness: 1.0
+  nonAssociatedSetGeneratorFunction:
+    Compressed Exponential Function:
+      coefficient: 1.0E-6
+      exponent: 2.0
+  opportunisticFadSetActionValueFunction:
+    Compressed Exponential Function:
+      coefficient: 1.0E-6
+      exponent: 2.0
   opportunisticFadSetDetectionProbability: 0.1
   searchActionDecayConstant: 1.0
-  searchActionLogisticMidpoint: 0.1
-  searchActionLogisticSteepness: 1.0
+  searchActionValueFunction:
+    Compressed Exponential Function:
+      coefficient: 1.0E-6
+      exponent: 2.0
   searchBonus: 0.1
   setCompositionWeightsPath: inputs/epo/set_compositions.csv
+-------
+Default to Destination Strategy
 -------
