--- a/inputs/tests/tunabacksliding/base_scenario.yaml
+++ b/inputs/tests/tunabacksliding/base_scenario.yaml
@@ -107,6 +107,7 @@ EPO Abundance Pathfinding:
     ownFadActionWeightBias: '1.0'
     minimumPercentageOfTripDurationAllowed: '1.0'
     planningHorizonInHours: '168.0'
+    purgeIllegalActionsImmediately: false
   fadInitializerFactory:
     Abundance FAD Beta Initializer With Expiration:
       daysOfFadActivity: '50.0'    
@@ -133,7 +134,7 @@ EPO Abundance Pathfinding:
         }
       speciesCodes: null
       totalCarryingCapacity: '445000.0'
-  fadMapFactory:
+  fadMapFactory: !!uk.ac.ox.oxfish.geography.fads.GenericFadMapFactory
     currentFiles:
       Y2016: inputs/epo_inputs/tests/backsliding/currents_2016_daily.csv
       Y2017: inputs/epo_inputs/tests/backsliding/currents_2017_daily.csv
