(1) allowed for optionally the NOA sets to fish in areas neighbouring the fisher (as well as the usual directly underneath one) (2) allowed for variable bias in the NOA sets (3) force gradle tests to keep track of full stack error to figure out what's wrong with github actions

--- a/build.gradle
+++ b/build.gradle
@@ -134,6 +134,15 @@ test {
     maxParallelForks = Math.min(Runtime.runtime.availableProcessors(), 8)
 }
 
+tasks.withType(Test) {
+    testLogging {
+        exceptionFormat = 'full'
+
+        // Optionally do:
+        showStackTraces = true
+    }
+}
+
 task shadowJarFoo(type: ShadowJar) {
     archiveFileName = 'foo.jar'
     from sourceSets.main.output //tells the task to include the project code
