--- a/inputs/tests/tunabacksliding/base_scenario.yaml
+++ b/inputs/tests/tunabacksliding/base_scenario.yaml
@@ -1,7 +1,10 @@
 EPO Abundance Pathfinding:
+  gearStrategy:
+    FAD Refill:
+      maxFadDeploymentsFile: inputs/epo_inputs/tests/backsliding/max_deployments.csv
   abundanceCatchSamplersFactory:
     abundanceFilters: null
-    catchSamplesFile: inputs/epo_inputs/set_samples.csv
+    catchSamplesFile: inputs/epo_inputs/tests/backsliding/set_samples.csv
   abundanceFiltersFactory:
     selectivityFilePath: inputs/epo_inputs/abundance/selectivity.csv
   abundanceInitializerFactory:
@@ -47,7 +50,7 @@ EPO Abundance Pathfinding:
     fadInitializerFactory: null
     fadSetObservers: !!set {
       }
-    locationValuesFile: inputs/epo_inputs/location_values.csv
+    locationValuesFile: inputs/epo_inputs/tests/backsliding/location_values.csv
     nonAssociatedSetObservers: !!set {
       }
     nonAssociatedSetTimeSinceLastVisitModulationFunction:
@@ -93,7 +96,7 @@ EPO Abundance Pathfinding:
     attractionWeightsFile: inputs/epo_inputs/location_values.csv
     catchSamplersFactory: !!uk.ac.ox.oxfish.fisher.purseseiner.samplers.AbundanceCatchSamplersFactory
       abundanceFilters: null
-      catchSamplesFile: inputs/epo_inputs/set_samples.csv
+      catchSamplesFile: inputs/epo_inputs/tests/backsliding/set_samples.csv
     deploymentBias: '1.0'
     distancePenaltyFadSets: '1.0'
     hoursWastedOnFailedSearches: '20.0'
@@ -101,7 +104,7 @@ EPO Abundance Pathfinding:
       Squared Discretization:
         horizontalSplits: '5'
         verticalSplits: '3'
-    maxTripDurationFile: inputs/epo_inputs/boats.csv
+    maxTripDurationFile: inputs/epo_inputs/tests/backsliding/boats.csv
     minimumValueFadSets: '5000.0'
     minimumValueOpportunisticFadSets: '5000.0'
     ownFadActionWeightBias: '1.0'
@@ -188,4 +191,4 @@ EPO Abundance Pathfinding:
     recruitmentProcesses: null
   zapper: true
   zapperAge: false
-  vesselsFilePath: inputs/epo_inputs/boats.csv
+  vesselsFilePath: inputs/epo_inputs/tests/backsliding/boats.csv
