--- a/inputs/YAML Samples/components/DestinationStrategy.yaml
+++ b/inputs/YAML Samples/components/DestinationStrategy.yaml
@@ -81,7 +81,7 @@ SNALSAR:
   profit:
     Remembered Profits:
       includeOpportunityCosts: true
-  safety: Socially Acceptable Everywhere
+  safety: Ignore Rules
   sociallyAcceptable: Nobody Fishes Here
 -------
 Heatmap Based:
@@ -339,7 +339,7 @@ Generalized Cognitive Strategy:
 -------
 Gravity Destination Strategy:
   attractionWeightsFile: null
-  maxTripDurationFile: inputs/epo/boats.csv
+  maxTripDurationFile: inputs/epo_inputs/boats.csv
 -------
 Random Fishing Plans Strategy:
   hourDelayBetweenFishing: '1.0'
