--- a/inputs/tests/tunabacksliding/base_scenario.yaml
+++ b/inputs/tests/tunabacksliding/base_scenario.yaml
@@ -2,6 +2,9 @@ EPO Abundance Pathfinding:
   gearStrategy:
     FAD Refill:
       maxFadDeploymentsFile: inputs/epo_inputs/tests/backsliding/max_deployments.csv
+  catchSamplersFactory: !!uk.ac.ox.oxfish.fisher.purseseiner.samplers.AbundanceCatchSamplersFactory
+    abundanceFilters: null
+    catchSamplesFile: inputs/epo_inputs/tests/backsliding/set_samples.csv
   abundanceFiltersFactory:
     selectivityFilePath: inputs/epo_inputs/abundance/selectivity.csv
   abundanceInitializerFactory:
@@ -103,6 +106,7 @@ EPO Abundance Pathfinding:
         minimumValueFadSets: '6971.021459999999'
     hoursWastedOnFailedSearches: '1.4932888800000002'
     maxTripDurationFile: inputs/epo_inputs/tests/backsliding/boats.csv
+    minimumValueFadSets: '5000.0'
     minimumValueOpportunisticFadSets: '5000.0'
     ownFadActionWeightBias: '1.0'
     minimumPercentageOfTripDurationAllowed: '1.0'
